Change tab's name button. closes #1 #2

--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Nouveau titre de Tab Three
+      Nolwenn
     </ion-title>
   </ion-toolbar>
 </ion-header>
