--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Tab One
+      {{ this.tabNameService.getTabNameForId(1) }}
     </ion-title>
   </ion-toolbar>
 </ion-header>
